# vSMTP

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  build.rs  build.sh  deny.toml  release.toml  vsl-api
src/plugins/vsmtp-plugin-csv/: Cargo.toml
src/plugins/vsmtp-plugin-csv/src/: access.rs  api.rs  lib.rs  refresh.rs  service.rs
src/plugins/vsmtp-plugin-ldap/: Cargo.toml  README.md  build.rs
src/plugins/vsmtp-plugin-ldap/docker/: README.md  docker-compose.yml
src/plugins/vsmtp-plugin-ldap/docker/certs/: openldap.csr  openldap.key  openldap.pem  openldapCA.key  openldapCA.pem
src/plugins/vsmtp-plugin-ldap/docker/ldap-config/: person.ldif
src/plugins/vsmtp-plugin-ldap/docker/vsmtp-config/: filter.vsl
src/plugins/vsmtp-plugin-ldap/src/: api.rs  lib.rs
src/plugins/vsmtp-plugin-memcached/: Cargo.toml  build.rs
src/plugins/vsmtp-plugin-memcached/docker/: README.md  docker-compose.yml
src/plugins/vsmtp-plugin-memcached/docker/memcached/: Dockerfile
src/plugins/vsmtp-plugin-memcached/docker/vsmtp-config/: filter.vsl  vsmtp.vsl
src/plugins/vsmtp-plugin-memcached/src/: api.rs  lib.rs  tests.rs
src/plugins/vsmtp-plugin-mysql/: Cargo.toml  build.rs
src/plugins/vsmtp-plugin-mysql/docker/: Dockerfile  README.md  docker-compose.yml
src/plugins/vsmtp-plugin-mysql/docker/mysql-config/: greylist-dump.sql
src/plugins/vsmtp-plugin-mysql/docker/vsmtp-config/: filter.vsl  vsmtp.vsl
src/plugins/vsmtp-plugin-mysql/src/: api.rs  lib.rs
src/vqueue/: Cargo.toml  build.rs
src/vqueue/src/: api.rs  args.rs  extension.rs  lib.rs  main.rs  model.rs
src/vqueue/src/cli/: args.rs  execute.rs
src/vqueue/src/cli/debugger/: message_move.rs  message_remove.rs  message_show.rs  mod.rs  show.rs
src/vqueue/src/command/: mod.rs  queue_show.rs
src/vqueue/src/command/msg_command/: move.rs  remove.rs  show.rs
src/vqueue/src/implementation/: fs.rs  temp.rs
src/vsmtp/plugins/vsmtp-plugin-vsl/: Cargo.toml
src/vsmtp/plugins/vsmtp-plugin-vsl/src/: api.rs  lib.rs  objects.rs  plugin.rs
src/vsmtp/plugins/vsmtp-plugin-vsl/tests/: lib.rs  objects.rs  utils.rs
src/vsmtp/vsmtp-auth/: Cargo.toml
src/vsmtp/vsmtp-auth/src/: lib.rs
src/vsmtp/vsmtp-auth/src/dkim/: algorithm.rs  canonicalization.rs  mod.rs  private_key.rs  public_key.rs  record.rs  sign.rs  signature.rs  verify.rs
src/vsmtp/vsmtp-auth/src/dmarc/: mod.rs  record.rs
src/vsmtp/vsmtp-auth/src/spf/: mod.rs
src/vsmtp/vsmtp-common/: Cargo.toml
src/vsmtp/vsmtp-common/src/: context.rs  either.rs  envelop.rs  event.rs  lib.rs  libc_abstraction.rs  mail.rs  mail_context.rs  mechanism.rs  mime_type.rs  queue.rs  rcpt.rs  state.rs  status.rs  transfer.rs  transport.rs  utils.rs
src/vsmtp/vsmtp-common/src/auth/: credentials.rs  mechanism.rs
src/vsmtp/vsmtp-common/src/message/: mail.rs  message_body.rs  mime_type.rs  raw_body.rs
src/vsmtp/vsmtp-common/src/tests/: event.rs  libc_abstraction.rs
src/vsmtp/vsmtp-common/src/trait/: mail_parser.rs
src/vsmtp/vsmtp-common/src/traits/: mail_parser.rs
src/vsmtp/vsmtp-common/src/transfer/: error.rs  status.rs
src/vsmtp/vsmtp-common/src/type/: address.rs  code_id.rs  reply.rs  reply_code.rs
src/vsmtp/vsmtp-common/src/types/: address.rs  client_name.rs  code_id.rs  domain.rs  reply.rs  reply_code.rs  target.rs  tls_cipher_suite.rs  tls_protocol_version.rs
src/vsmtp/vsmtp-config/: Cargo.toml
src/vsmtp/vsmtp-config/src/: config.rs  default.rs  dns_resolver.rs  ensure.rs  lib.rs  log4rs_helper.rs  rustls_helper.rs  trust_dns_helper.rs  virtual_tls.rs
src/vsmtp/vsmtp-config/src/builder/: validate.rs  wants.rs  with.rs
src/vsmtp/vsmtp-config/src/parser/: socket_addr.rs  syst_group.rs  syst_user.rs  tls_certificate.rs  tls_cipher_suite.rs  tls_private_key.rs  tls_protocol_version.rs  tracing_directive.rs
src/vsmtp/vsmtp-config/src/tests/: mod.rs  validate.rs
src/vsmtp/vsmtp-core/: Cargo.toml  build.rs
src/vsmtp/vsmtp-core/src/: args.rs  lib.rs  main.rs  tracing_subscriber.rs
src/vsmtp/vsmtp-delivery/: Cargo.toml
src/vsmtp/vsmtp-delivery/src/: deliver.rs  forward.rs  lib.rs  maildir.rs  mbox.rs  send.rs  sender.rs
src/vsmtp/vsmtp-delivery/src/transport/: deliver.rs  forward.rs  maildir.rs  mbox.rs
src/vsmtp/vsmtp-docs/: Cargo.toml  README.md
src/vsmtp/vsmtp-docs/src/: main.rs
src/vsmtp/vsmtp-mail-parser/: Cargo.toml
src/vsmtp/vsmtp-mail-parser/src/: error.rs  helpers.rs  lib.rs  parser.rs
src/vsmtp/vsmtp-mail-parser/src/implementation/: basic_parser.rs  mail_mime_parser.rs
src/vsmtp/vsmtp-mail-parser/src/message/: mail.rs  message_body.rs  mime_type.rs  raw_body.rs
src/vsmtp/vsmtp-mail-parser/src/tests/: mod.rs
src/vsmtp/vsmtp-mail-parser/src/traits/: error.rs  mail_parser.rs
src/vsmtp/vsmtp-plugins/: Cargo.toml  README.md
src/vsmtp/vsmtp-plugins/src/: lib.rs
src/vsmtp/vsmtp-protocol/: Cargo.toml
src/vsmtp/vsmtp-protocol/src/: command.rs  connection_kind.rs  error.rs  lib.rs  reader.rs  receiver.rs  receiver_handler.rs  sink.rs  smtp_sasl.rs  stream.rs  writer.rs
src/vsmtp/vsmtp-rule-engine/: Cargo.toml  README.md
src/vsmtp/vsmtp-rule-engine/api/: auth.rhai  codes.rhai  connection.rhai  default_fallback_rules.rhai  default_incoming_rules.rhai  default_outgoing_rules.rhai  default_rules.rhai  delivery.rhai  envelop.rhai  getters.rhai  internal.rhai  message.rhai  networks.rhai  rhai-api.rhai  security.rhai  services.rhai  status.rhai  sys-api.rhai  transaction.rhai  types.rhai  utils.rhai
src/vsmtp/vsmtp-rule-engine/default/: internal_rules.rhai  root_filter_rules.rhai
src/vsmtp/vsmtp-rule-engine/src/: error.rs  execution_state.rs  lib.rs  rule_engine.rs  rule_state.rs  server_api.rs  sub_domain_hierarchy.rs
src/vsmtp/vsmtp-server/: Cargo.toml
src/vsmtp/vsmtp-server/benches/: receiver.rs  receiver2.rs
src/vsmtp/vsmtp-server/src/: auth.rs  channel_message.rs  lib.rs  on_mail.rs  rsasl_callback.rs  runtime.rs  server.rs
src/vsmtp/vsmtp-test/: Cargo.toml
src/vsmtp/vsmtp-test/src/: config.rs  lib.rs  receiver.rs  vsl.rs
src/vsmtp/vsmtp-test/tests/: mod.rs
(+521 files in other folders)
