[workspace]
resolver = "2"
members = [
  # Main crates.
  "src/vqueue",
  "src/vsmtp/vsmtp-auth",
  "src/vsmtp/vsmtp-common",
  "src/vsmtp/vsmtp-config",
  "src/vsmtp/vsmtp-core",
  "src/vsmtp/vsmtp-delivery",
  "src/vsmtp/vsmtp-docs",
  "src/vsmtp/vsmtp-mail-parser",
  "src/vsmtp/vsmtp-plugins",
  "src/vsmtp/vsmtp-rule-engine",
  "src/vsmtp/vsmtp-server",
  "src/vsmtp/vsmtp-test",

  # Plugins.
  "src/vsmtp/plugins/vsmtp-plugin-vsl",

  # "src/vsmtp/plugins/vsmtp-plugin-csv",
  # "src/vsmtp/plugins/vsmtp-plugin-mysql",
]

exclude = ["fuzz", "benchmarks/stress", "src/vsmtp/plugins/"]
