[workspace]
resolver = "2"
members = [
  # Main crates.
  "src/vqueue",
  "src/vsmtp/vsmtp-auth",
  "src/vsmtp/vsmtp-common",
  "src/vsmtp/vsmtp-config",
  "src/vsmtp/vsmtp-core",
  "src/vsmtp/vsmtp-delivery",
  "src/vsmtp/vsmtp-mail-parser",
  "src/vsmtp/vsmtp-protocol",
  "src/vsmtp/vsmtp-rule-engine",
  "src/vsmtp/vsmtp-server",
  "src/vsmtp/vsmtp-test",
  "src/vsmtp/vsmtp-plugin-vsl",

  # Plugins.

  "src/plugins/vsmtp-plugin-csv",
  "src/plugins/vsmtp-plugin-mysql",
  "src/plugins/vsmtp-plugin-memcached",
]

exclude = ["fuzz", "benchmarks/stress"]
