[package]
edition = "2021"

license = "GPL-3.0-only"
name = "vqueue"
version = "1.3.4"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP's queues mananger. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vqueue/"

readme = "../../README.md"
keywords = ["vsmtp"]
categories = ["command-line-utilities"]

build = "build.rs"

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", search = "vsmtp-common = \\{ path = \"../vsmtp/vsmtp-common\", version = .*", replace = "vsmtp-common = { path = \"../vsmtp/vsmtp-common\", version = \"{{version}}\" }", prerelease = true },
    { file = "Cargo.toml", search = "vsmtp-config = \\{ path = \"../vsmtp/vsmtp-config\", version = .*", replace = "vsmtp-config = { path = \"../vsmtp/vsmtp-config\", version = \"{{version}}\" }", prerelease = true },
    { file = "Cargo.toml", search = "vsmtp-mail-parser = \\{ path = \"../vsmtp/vsmtp-mail-parser\", version = .*", replace = "vsmtp-mail-parser = { path = \"../vsmtp/vsmtp-mail-parser\", version = \"{{version}}\" }", prerelease = true },
]

[dependencies]
vsmtp-common = { path = "../vsmtp/vsmtp-common", version = "1.3.4" }
vsmtp-config = { path = "../vsmtp/vsmtp-config", version = "1.3.4" }
vsmtp-mail-parser = { path = "../vsmtp/vsmtp-mail-parser", version = "1.3.4" }

tracing = { version = "0.1.37", default-features = false, features = [
    "std",
    "attributes",
] }
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
clap = { version = "4.0.17", default-features = false, features = [
    "std",
    "derive",
    "cargo",
] }
itertools = { version = "0.10.5", default-features = false, features = [
    "use_std",
] }
serde_json = { version = "1.0.86", default-features = false, features = [
    "std",
] }
strum = { version = "0.24.1", features = ["std", "derive"] }

tokio = { version = "1.21.2", default-features = false, features = [
    "macros",
    "time",
    "sync",
    "fs",
    "net",
    "io-util",
    "io-std",
    "rt-multi-thread",
] }
async-trait = "0.1.58"
futures-util = { version = "0.3.24", default-features = false, features = [
    "async-await",
] }

# testing
tempfile = { version = "3.2.0", optional = true, default-features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"
function_name = "0.3.0"
vsmtp-test = { path = "../vsmtp/vsmtp-test" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
testing = ["tempfile"]
