[package]
edition = "2021"

name = "vqueue"
version = "2.1.1"
license = "GPL-3.0-only"

rust-version = "1.66.1"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP's queues mananger. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vqueue/"

readme = "../../README.md"
keywords = ["vsmtp"]
categories = ["command-line-utilities"]

build = "build.rs"

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", prerelease = true, search = "common\\]\nversion = .*", replace = "common]\nversion = \"={{version}}\"" },
    { file = "Cargo.toml", prerelease = true, search = "config\\]\nversion = .*", replace = "config]\nversion = \"={{version}}\"" },
    { file = "Cargo.toml", prerelease = true, search = "mail-parser\\]\nversion = .*", replace = "mail-parser]\nversion = \"={{version}}\"" },
]

[dependencies.vsmtp-common]
version = "=2.1.1"
path = "../vsmtp/vsmtp-common"

[dependencies.vsmtp-config]
version = "=2.1.1"
path = "../vsmtp/vsmtp-config"

[dependencies.vsmtp-mail-parser]
version = "=2.1.1"
path = "../vsmtp/vsmtp-mail-parser"

[dependencies]
tracing = { version = "0.1.40", default-features = false, features = ["std", "attributes", "release_max_level_info"] }
anyhow = { version = "1.0.69", default-features = false, features = ["std"] }
clap = { version = "4.1.8", default-features = false, features = ["std", "derive", "cargo", "usage", "help", "color"] }
itertools = { version = "0.10.5", default-features = false, features = ["use_std"] }
serde_json = { version = "1.0.93", default-features = false, features = ["std"] }
strum = { version = "0.24.1", features = ["std", "derive"] }

tokio = { version = "1.26.0", default-features = false, features = [
    "macros",
    "time",
    "sync",
    "fs",
    "net",
    "io-util",
    "io-std",
    "rt-multi-thread",
] }
async-trait = "0.1.64"
futures-util = { version = "0.3.24", default-features = false, features = ["async-await"] }

uuid = { version = "1.3.0", default-features = false, features = ["std", "v4", "fast-rng"] }

# testing
tempfile = { version = "3.4.0", optional = true, default-features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"
function_name = "0.3.0"
vsmtp-test = { path = "../vsmtp/vsmtp-test" }
time = { version = "0.3.20", default-features = false, features = ["std", "formatting", "macros", "serde-well-known"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
testing = ["tempfile"]
