[package]
edition = "2021"

name = "vsmtp-plugin-csv"
version = "0.1.0"
license = "GPL-3.0-only"

authors = ["Team viridIT <https://viridit.com/>"]
description = "A plugin for vSMTP that supports CSV databases"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-plugin-csv/"

readme = "../../../README.md"
keywords = ["vsmtp", "csv"]
categories = ["email", "database", "plugin"]

rust-version = "1.63.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
vsmtp-plugin-vsl = { version = "=1.4.0-rc.10", path = "../../vsmtp/plugins/vsmtp-plugin-vsl" }

rhai = { version = "1.11.0", features = ["unchecked", "sync", "internals", "no_closure", "metadata"] }
csv = { version = "1.1.6", default-features = false }
anyhow = { version = "1.0.65", default-features = false, features = ["std"] }
serde = { version = "1.0.144", default-features = false, features = ["std", "derive"] }
