[package]
edition = "2021"

name = "vsmtp-plugin-memcached"
version = "2.0.1-rc.5"
license = "GPL-3.0-only"

authors = ["Team viridIT <https://viridit.com/>"]
description = "A plugin for vSMTP that enable support for memcached databases"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-plugin-memcached/"

readme = "../../../README.md"
keywords = ["vsmtp", "memcached"]
categories = ["email", "database", "plugin"]

rust-version = "1.66.1"

publish = false

[lib]
# You could also use Rust's unstable ABI with "dylib".
crate-type = ["cdylib"]

[package.metadata.release]
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"

[dependencies]
rhai = { version = "1.12.0", features = ["unchecked", "sync", "internals", "no_closure", "metadata"] }
serde = { version = "1.0.152", default-features = false, features = ["std", "derive"] }
humantime-serde = { version = "1.1.1", default-features = false }
memcache = { version = "0.17.0", default-features = false }
r2d2 = { version = "0.8.10", default-features = false }

[build-dependencies]
rhai-autodocs = "0.1.0"
rhai = { version = "1.12.0", features = ["unchecked", "sync", "internals", "no_closure", "metadata"] }
serde = { version = "1.0.152", default-features = false, features = ["std", "derive"] }
humantime-serde = { version = "1.1.1", default-features = false }
memcache = { version = "0.17.0", default-features = false }
r2d2 = { version = "0.8.10", default-features = false }

[dev-dependencies]
vsmtp-test = { path = "../../vsmtp/vsmtp-test" }
test-log = { version = "0.2.11", features = ["trace"] }
pretty_assertions = "1.3.0"
tokio = { version = "1.24.1", default-features = false, features = [
  "macros",
  "sync",
  "fs",
  "libc",
  "mio",
  "rt-multi-thread",
] }
env_logger = "0.10.0"
tokio-rustls = "0.23.4"
rustls-pemfile = { version = "1.0.2", default-features = false }
vsmtp-config = { path = "../../vsmtp/vsmtp-config" }
rand = "0.8.5"
vqueue = { path = "../../vqueue", features = ["testing"] }
vsmtp-protocol = { path = "../../vsmtp/vsmtp-protocol" }
vsmtp-rule-engine = { path = "../../vsmtp/vsmtp-rule-engine" }
vsmtp-server = { path = "../../vsmtp/vsmtp-server" }
time = { version = "0.3.15", default-features = false, features = ["std", "formatting", "macros", "serde-well-known"] }
uuid = { version = "1.2.2", default-features = false, features = ["std", "v4", "fast-rng"] }
tokio-stream = { version = "0.1.11", default-features = false, features = ["time"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter", "fmt"] }
