[package]
edition = "2021"

name = "vsmtp-auth"
version = "1.2.1"
license = "GPL-3.0-only"

rust-version = "1.58"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-auth/"

readme = "../../../README.md"
keywords = ["vsmtp", "dkim", "dmarc"]
categories = ["data-structures"]

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", search = "vsmtp-mail-parser = \\{ path = \"../vsmtp-mail-parser\", default-features = false, version = .*", replace = "vsmtp-mail-parser = { path = \"../vsmtp-mail-parser\", default-features = false, version = \"{{version}}\" }", prerelease = true },
]

[dependencies]
vsmtp-mail-parser = { path = "../vsmtp-mail-parser", default-features = false, version = "1.2.1" }

serde = { version = "1.0.144", features = ["derive"] }
tracing = "0.1.36"
thiserror = "1.0.32"
anyhow = "1.0.62"

strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.20.1", default-features = false, features = [
    "macros",
    "time",
    "sync",
    "fs",
    "net",
    "io-util",
    "rt-multi-thread",
] }

base64 = "0.13.0"
viaspf = { version = "0.4.1", features = ["trust-dns-resolver"] }

sha2 = "0.10.2"
rsa = "0.6.1"

# should be optional and under a legacy flag
sha1 = "0.10.1"

convert_case = "0.5.0"
addr = "0.15.4"

[dev-dependencies]
pretty_assertions = "1.2.1"
vsmtp-mail-parser = { path = "../vsmtp-mail-parser" }
trust-dns-resolver = { version = "0.21.2", default-features = false, features = [
    "system-config",
    "serde-config",
    "tokio-runtime",
] }
rand = "0.8.5"
