[package]
edition = "2021"

name = "vsmtp-auth"
version = "1.3.0"
license = "GPL-3.0-only"

rust-version = "1.62.1"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-auth/"

readme = "../../../README.md"
keywords = ["vsmtp", "dkim", "dmarc", "spf"]
categories = ["data-structures"]

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", search = "vsmtp-mail-parser = \\{ path = \"../vsmtp-mail-parser\", version = .*", replace = "vsmtp-mail-parser = { path = \"../vsmtp-mail-parser\", version = \"{{version}}\" }", prerelease = true },
]

[dependencies]
vsmtp-mail-parser = { path = "../vsmtp-mail-parser", version = "1.3.0" }

serde = { version = "1.0.144", default-features = false, features = [
    "std",
    "derive",
] }
tracing = { version = "0.1.36", default-features = false, features = ["std"] }
thiserror = { version = "1.0.35", default-features = false }
anyhow = { version = "1.0.65", default-features = false, features = ["std"] }

strum = { version = "0.24.1", default-features = false, features = [
    "std",
    "derive",
] }

base64 = { version = "0.13.0", default-features = false }
viaspf = { version = "0.4.1", default-features = false, features = [
    "tokio-timeout",
    "trust-dns-resolver",
] }

sha2 = { version = "0.10.6", default-features = false, features = ["std"] }
rsa = { version = "0.6.1", default-features = false, features = [
    "std",
    "pem",
    # "serde", # TODO
] }

sha1 = { version = "0.10.5", optional = true, default-features = false, features = [
    "std",
] }

convert_case = { version = "0.6.0", default-features = false }
addr = { version = "0.15.6", default-features = false, features = [
    "std",
    # "serde", # TODO
] }

[features]
historic = ["dep:sha1"]

[dev-dependencies]
pretty_assertions = "1.3.0"
vsmtp-mail-parser = { path = "../vsmtp-mail-parser" }
trust-dns-resolver = { version = "0.21.2", default-features = false, features = [
    "system-config",
    "serde-config",
    "tokio-runtime",
] }
rand = "0.8.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
