[package]
edition = "2021"

name = "vsmtp-auth"
version = "1.4.0-rc.15"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-auth/"

readme = "../../../README.md"
keywords = ["vsmtp", "dkim", "dmarc", "spf"]
categories = ["data-structures"]

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", prerelease = true, search = "mail-parser\\]\nversion = .*", replace = "mail-parser]\nversion = \"={{version}}\"" },
]

[dependencies.vsmtp-mail-parser]
version = "=1.4.0-rc.15"
path = "../vsmtp-mail-parser"

[dependencies]
serde = { version = "1.0.152", default-features = false, features = [
    "std",
    "derive",
] }
tracing = { version = "0.1.37", default-features = false, features = [
    "std",
    "attributes",
    "release_max_level_info",
] }
thiserror = { version = "1.0.38", default-features = false }
anyhow = { version = "1.0.68", default-features = false, features = ["std"] }

base64 = { version = "0.20.0", default-features = false, features = ["std"] }
strum = { version = "0.24.1", default-features = false, features = [
    "std",
    "derive",
] }
viaspf = { version = "0.5.0", default-features = false, features = [
    "tokio-timeout",
    "trust-dns-resolver",
] }
ring-compat = { version = "0.5.1", default-features = false, features = [
    "std",
    "alloc",
    "digest",
    "signature",
] }
rsa = { version = "0.7.2", default-features = false, features = [
    "std",
    "pem",
    # "serde", # TODO
] }

sha2 = { version = "0.10.6", default-features = false, features = [
    "std",
    "oid",
] }
sha1 = { version = "0.10.5", optional = true, default-features = false, features = [
    "std",
    "oid",
] }

trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
    "system-config",
    "serde-config",
    "tokio-runtime",
] }
addr = { version = "0.15.6", default-features = false, features = ["std"] }

[features]
historic = ["dep:sha1"]

[dev-dependencies]
pretty_assertions = "1.3.0"

rand = "0.8.5"
vsmtp-test = { path = "../vsmtp-test" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
