[package]
edition = "2021"

name = "vsmtp-common"
version = "1.3.4"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-common/"

readme = "../../../README.md"
keywords = ["vsmtp", "smtp", "mail"]
categories = ["data-structures"]

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", prerelease = true, search = "\\[dependencies.auth\\]\nversion = .*", replace = "[dependencies.vsmtp-auth]\nversion = \"{{version}}\"" },
    { file = "Cargo.toml", prerelease = true, search = "\\[dependencies.vsmtp-mail-parser\\]\nversion = .*", replace = "[dependencies.vsmtp-mail-parser]\nversion = \"{{version}}\"" },
]

[dependencies.vsmtp-auth]
version = "1.3.4"
path = "../vsmtp-auth"

[dependencies.vsmtp-mail-parser]
version = "1.3.4"
path = "../vsmtp-mail-parser"

[dependencies]
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
log = { version = "0.4.17", default-features = false, features = ["std"] }
addr = { version = "0.15.6", default-features = false, features = [
    "std",
    # "serde", # TODO
] }
fastrand = { version = "1.8.0", default-features = false }

strum = { version = "0.24.1", default-features = false, features = [
    "std",
    "derive",
] }
libc = { version = "0.2.135", default-features = false, features = ["std"] }
lettre = { version = "0.10.0", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
    "tracing",
    "pool",
] }
tokio = { version = "1.21.2", default-features = false, features = [
    "macros",
    "sync",
    "fs",
    "libc",
    "mio",
] }
serde = { version = "1.0.145", default-features = false, features = [
    "std",
    "derive",
] }
serde_with = { version = "2.0.1", default-features = false, features = [
    "std",
    "macros",
] }
thiserror = { version = "1.0.37", default-features = false }

either = { version = "1.8.0", default-features = false, features = ["serde"] }

base64 = { version = "0.13.1", default-features = false, features = ["std"] }

[dev-dependencies]
serde_json = { version = "1.0.86", default-features = false, features = [
    "std",
] }
users = { version = "0.11.0", features = [] }
pretty_assertions = "1.3.0"
