[package]
edition = "2021"

name = "vsmtp-common"
version = "1.4.0-rc.8"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-common/"

readme = "../../../README.md"
keywords = ["vsmtp", "smtp", "mail"]
categories = ["data-structures"]

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", prerelease = true, search = "auth\\]\nversion = .*", replace = "auth]\nversion = \"={{version}}\"" },
    { file = "Cargo.toml", prerelease = true, search = "mail-parser\\]\nversion = .*", replace = "mail-parser]\nversion = \"={{version}}\"" },
]

[dependencies.vsmtp-auth]
version = "=1.4.0-rc.9"
path = "../vsmtp-auth"

[dependencies.vsmtp-mail-parser]
version = "=1.4.0-rc.9"
path = "../vsmtp-mail-parser"

[dependencies]
anyhow = { version = "1.0.68", default-features = false, features = ["std"] }
addr = { version = "0.15.6", default-features = false, features = ["std"] }
fastrand = { version = "1.8.0", default-features = false }

strum = { version = "0.24.1", default-features = false, features = [
    "std",
    "derive",
] }
time = { version = "0.3.17", default-features = false, features = [
    "std",
    "formatting",
    "macros",
    "serde-well-known",
] }
libc = { version = "0.2.139", default-features = false, features = ["std"] }
tracing = { version = "0.1.37", default-features = false, features = [
    "std",
    "attributes",
    "release_max_level_info",
] }

lettre = { version = "0.10.0", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
    "tracing",
    "pool",
    "serde",
] }
tokio = { version = "1.23.0", default-features = false, features = [
    "macros",
    "sync",
    "fs",
    "libc",
    "mio",
] }
rustls = { version = "0.20.7", default-features = false, features = [
    "tls12",
    "logging",
] }
rustls-pemfile = { version = "1.0.1", default-features = false }

trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
    "dns-over-rustls",
    "dnssec-ring",
    "tokio-runtime",
] }
serde = { version = "1.0.152", default-features = false, features = [
    "std",
    "derive",
] }
serde_with = { version = "2.1.0", default-features = false, features = [
    "std",
    "macros",
    "base64",
] }
thiserror = { version = "1.0.38", default-features = false }

either = { version = "1.8.0", default-features = false, features = ["serde"] }

base64 = { version = "0.20.0", default-features = false, features = ["std"] }
rsasl = { version = "=2.0.0-rc.4", default-features = false, features = [
    "provider",
    "config_builder",
    # "scram-sha-1",
    # "scram-sha-2",
    "anonymous",
    # "external",
    # "xoauth2",
    "plain",
    "login",
] }

uuid = { version = "1.2.2", default-features = false, features = [
    "std",
    "v4",
    "fast-rng",
    "serde",
] }

[dev-dependencies]
serde_json = { version = "1.0.91", default-features = false, features = [
    "std",
] }
users = { version = "0.11.0", features = [] }
pretty_assertions = "1.3.0"
